--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -255,6 +255,17 @@ section.post {
     section.post h1 .date {
       color: #d0d0d0;
       font-size: 10px; }
+    section.post h1 ul.tags {
+      padding: 0;
+      list-style: none;
+      font-size: 12px;
+      color: #999;
+      margin: 5px 0 0;
+    }
+    section.post h1 ul.tags li {
+      display: inline-block;
+      margin: 0 5px;
+    }
   section.post iframe {
     width: 100%; }
   section.post iframe, section.post img {
